# sdlc-sysbox-docker-demo

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  compose.yaml  pyproject.toml
.github/: labels.json
.github/ISSUE_TEMPLATE/: concurrent-adoption-race.md  incident-openhands.md  story-openhands-build.md
agent-canvas/: README.md
app/: README.md
app/db/: 001_schema.sql
app/petstore_app/: __init__.py  adoptions.py  api.py
app/web/: Dockerfile  app.js  (+3 more)
docs/: build-parent-child-factory.md  enterprise-memory-cost-demo.md  github-demo-walkthrough.md  replicated-jira-delegated-factory-demo.md  setup-checklist.md  sysbox-demo-runbook.md  tested-demo-flow.md  tested-environment.md  work-log.md
fixtures/: github_issue_labeled_build.json
openspec/: project.md
prompts/: fix-adoption-race.md
scripts/: README.md  _compat.py  build_context_reuse_report.py  create_github_labels.py  disable_openhands_automations.py  launch_sidekick_v2.py  list_openhands_automation_runs.py  list_openhands_automations.py  openhands_v1_delegate.py  petstore_sre_setup.py  preflight_github_demo.py  preflight_live_connections.py  register_github_automations.py  register_jira_automations.py  register_replicated_factory_automation.py  run_replicated_factory.py  simulate_github_event.py  summarize_openhands_conversation.py
skills/: README.md
tests/: test_automation_packages.py  test_context_reuse_report.py  test_github_adapter.py  test_github_label_fixtures.py  test_openhands_v1_delegate.py  test_replicated_factory_package.py  test_sidekick_v2_launcher.py
(+89 files in other folders)
