[project]
name = "sdlc-sysbox-docker-demo"
version = "0.1.0"
description = "OpenHands Enterprise Sysbox Docker-in-Docker SDLC demo"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.116",
  "psycopg[binary]>=3.2",
  "redis>=6.2",
  "uvicorn>=0.35",
]

[project.optional-dependencies]
test = [
  "httpx>=0.28",
  "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["app/tests", "tests"]
pythonpath = ["app", "."]
